arreglat dades History i Stats